# MeasFlow

./: .gitignore  README.md  SPECIFICATION.md  THIRD-PARTY-NOTICES.md  demo_measurement.meas  mkdocs.yml  todo.md
.github/scripts/: build_bench_report.py
.github/workflows/: auto-release.yml  benchmarks.yml  ci.yml  release.yml
benchmarks/OpenMeasure.Benchmarks/: WriteBenchmarks.cs
c/: CMakeLists.txt  README.md  measflow.c  measflow.h  vcpkg.json
c/benchmarks/: format_comparison.c
c/port/: vcpkg.json
c/tests/: test_measflow.c
csharp/benchmarks/MeasFlow.Benchmarks/: FormatComparisonBenchmarks.cs
csharp/src/MeasFlow/: MeasChannel.cs  MeasFlow.csproj  MeasReader.cs  MeasWriter.cs
csharp/src/MeasFlow/Bus/: BusGroupWriter.cs
docs/: README.md
docs/legal/: impressum.md  privacy.md
python/: .gitignore  pyproject.toml
python/benchmarks/: format_comparison.py
python/measflow/: __init__.py  bus.py  frames.py  reader.py  writer.py
python/tests/: test_crosslang.py  test_measflow.py
samples/QuickStart/: Program.cs
src/OpenMeasure/: ChannelStatistics.cs  OmxChannel.cs  OmxFile.cs  OmxReader.cs  OmxWriter.cs
tests/OpenMeasure.Tests/: RoundtripTests.cs  StreamingTests.cs
